# 2023_eeyre4

./: README.md  cmakelists.txt  git_cheat_sheet.txt.txt  hi_and_date.cmd.txt
Worksheet3/: adder.cpp  libadder.exp  libadder.lib
Worksheet3/adderstatic/include/: adder.h
Worksheet3/adderstatic/lib/: libadder.lib
worksheet4/calc/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
worksheet4/calc/include/: adder.h
worksheet4/calc/src/: adder.cpp  calc.cpp
worksheet4/hello_cmake/: CMakeLists.txt  hello1.cpp
worksheet4/hellocmake/: cmakelists.txt
